<resources>
    <string name="app_name">laba_8_1</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title">Сколько же вы прошли?</string>
    <string name="inputHint">Введите количество шагов</string>
    <string name="countTV">Количество шагов:</string>
    <string name="count">0</string>
    <string name="countBtn">Добавить количество шагов</string>
    <string name="deleteCount">Очистить количество шагов</string>
</resources>