<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActionFragment"
    tools:ignore="SpeakableTextPresentCheck" >

    <TextView
        android:id="@+id/countStep"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_marginTop="24dp"
        android:text="@string/count"
        android:textAlignment="center"
        android:textColor="#2196F3"
        android:textSize="132sp"
        app:layout_constraintEnd_toEndOf="@+id/titleTV"
        app:layout_constraintStart_toStartOf="@+id/titleTV"
        app:layout_constraintTop_toBottomOf="@+id/titleTV"
        tools:text="0" />

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="400dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:paddingBottom="32dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enterStepCount"
        android:layout_width="209dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/inputHint"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="#8D6E63"
        app:layout_constraintEnd_toEndOf="@+id/titleTV"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="@+id/titleTV"
        app:layout_constraintTop_toBottomOf="@+id/countStep" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="368dp"
        android:layout_height="36dp"
        android:layout_marginTop="12dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="@+id/enterStepCount"
        app:layout_constraintStart_toStartOf="@+id/enterStepCount"
        app:layout_constraintTop_toBottomOf="@+id/enterStepCount" />

    <Button
        android:id="@+id/deleteBtn"
        android:layout_width="85dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:background="#090909"
        android:text="@string/deleteCount"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/enterStepCount"
        app:layout_constraintEnd_toStartOf="@+id/enterStepCount"
        app:layout_constraintTop_toTopOf="@+id/enterStepCount"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/countBtn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:background="#10CF18"
        android:color="@color/green"
        android:text="@string/countBtn"
        android:textColor="@color/black"
        android:textColorHighlight="@color/teal_200"
        android:textColorHint="@color/green"
        android:textColorLink="#1E1515"
        android:textCursorDrawable="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/enterStepCount"
        app:layout_constraintStart_toEndOf="@+id/enterStepCount"
        app:layout_constraintTop_toTopOf="@+id/enterStepCount"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>